--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     ></script>
 
     <script defer src="script.js"></script>
-    <title>mapty // Map your workouts</title>
+    <title>Mapout</title>
   </head>
   <body>
     <div class="sidebar">
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="icon.png" alt="Logo" class="logo" />
 
       <ul class="workouts">
         <form class="form hidden">
@@ -119,14 +119,13 @@
       </ul>
 
       <p class="copyright">
-        &copy; Copyright by
+        Made By :
         <a
           class="twitter-link"
           target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own.
+          href="https://www.linkedin.com/in/aditya-divyang-879655191/"
+          >Aditya Divyang</a
+        >.
       </p>
     </div>
 
